<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_4sdp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/my_primary"
    tools:context="com.sobhy.notesapplication.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_6sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/_2sdp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="@dimen/_24ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/_8sdp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_textInputLayout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/baseline_email_24"
                android:layout_margin="@dimen/_14sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_textInputEditText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_textInputLayout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:endIconMode="password_toggle"
                android:layout_margin="@dimen/_14sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_textInputEditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/my_primary"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_18ssp"
                android:background="@drawable/login_btn_background"
                android:textAllCaps="false"
                android:layout_margin="@dimen/_14sdp"/>

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="@dimen/_6sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:padding="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/login_tv_createaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    android:padding="@dimen/_2sdp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>