<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:background="@color/my_primary">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_2sdp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/_6sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/_2sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_get_started"
                    android:textSize="@dimen/_24ssp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_8sdp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_textInputLayout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    android:layout_margin="@dimen/_14sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_textInputEditText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_textInputLayout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:endIconMode="password_toggle"
                    android:layout_margin="@dimen/_14sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_textInputEditText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_textInputLayout_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:endIconMode="password_toggle"
                    android:layout_margin="@dimen/_14sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_textInputEditText_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup_btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_18ssp"
                    android:background="@drawable/login_btn_background"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/_14sdp"/>

                <ProgressBar
                    android:id="@+id/signup_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_margin="@dimen/_6sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/_8sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:padding="@dimen/_2sdp"/>
                    <TextView
                        android:id="@+id/signup_tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/teal_700"
                        android:textStyle="bold"
                        android:padding="@dimen/_2sdp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</FrameLayout>