<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_2sdp"
    android:layout_margin="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    app:cardBackgroundColor="@color/teal_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_12sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"/>

        <EditText
            android:id="@+id/dialog_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#CBCBCC"
            android:hint="user@email.com"
            android:padding="@dimen/_6sdp"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textAllCaps="false"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/login_btn_background"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>